# winhttp

./: Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml
example-smol/: Cargo.toml
example-smol/src/: main.rs
example-sync/: Cargo.toml
example-sync/src/: main.rs
example-tokio/: Cargo.toml
example-tokio/src/: main.rs
examples/: async_get.rs  async_json.rs  client_helpers.rs  features.rs  websocket.rs
src/: async_request.rs  async_websocket.rs  callback.rs  client.rs  handle.rs  lib.rs  proxy.rs  request.rs  session.rs  types.rs  url.rs  websocket.rs
tests/: async_tests.rs  client_tests.rs  compile_fail_tests.rs  feature_tests.rs  http_integration_tests.rs  integration_tests.rs  typed_api_tests.rs  websocket_integration_tests.rs
