[package]
name = "winhttp"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Safe, ergonomic Rust bindings for the Windows WinHTTP API"
license = "MIT"
repository = "https://github.com/stevefan1999-personal/winhttp"
homepage = "https://github.com/stevefan1999-personal/winhttp"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-pc-windows-msvc"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
windows = { version = "0.62", features = [
    "Win32",
    "Win32_Networking_WinHttp",
    "Win32_Foundation",
    "Win32_Networking_WinSock",
] }
crossfire = { version = "3", optional = true }
parking_lot = { version = "0.12", optional = true }
futures-core = { version = "0.3", optional = true }
serde = { version = "1", optional = true }
serde_json = { version = "1", optional = true }

[features]
default = []
async = ["crossfire", "parking_lot", "futures-core"]
json = ["serde", "serde_json"]
websocket = []

[dev-dependencies]
pollster = "0.4"
smol = "2"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[example]]
name = "async_get"
required-features = ["async"]

[[example]]
name = "features"

[[example]]
name = "client_helpers"
required-features = ["async"]

[[example]]
name = "async_json"
required-features = ["async", "json"]

[[example]]
name = "websocket"
required-features = ["websocket"]

[workspace]
members = [
    "example-sync",
    "example-tokio",
    "example-smol",
]